[gd_scene load_steps=5 format=3 uid="uid://dysrwqnlvywo4"]

[ext_resource type="Script" path="res://Scenen/interactbutton.gd" id="1_m7brg"]
[ext_resource type="Texture2D" uid="uid://ooovafo8e538" path="res://Resources/MV Icons Keyboard/Individual Icons/keyboard_116.png" id="2_iyfyu"]
[ext_resource type="Texture2D" uid="uid://3vbqmc1hx02j" path="res://Resources/MV Icons Keyboard/Individual Icons/keyboard_15.png" id="3_t2jgd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hliws"]
radius = 80.0062

[node name="Interactbutton" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_m7brg")

[node name="E_off" type="Sprite2D" parent="."]
position = Vector2(1, -325)
scale = Vector2(1.625, 1.46875)
texture = ExtResource("2_iyfyu")

[node name="E" type="Sprite2D" parent="."]
position = Vector2(1, -325)
scale = Vector2(1.625, 1.46875)
texture = ExtResource("3_t2jgd")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_hliws")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
